full link sampling

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 model-code/data/syn_data_ruxiao_v3/syn_data1_200node/p_ji_all_values.csv
+model-code/data/syn_data_ruxiao_v4_config/dataset/*/p_ji_all_values.csv
